Bug 8016 - Yet another Uniwill laptop with ALC861 codec
Summary: Yet another Uniwill laptop with ALC861 codec
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-15 02:03 UTC by Andy Shevchenko
Modified: 2008-01-09 01:02 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.18
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
Add another Subsystem ID for ALC861 (538 bytes, patch)
2007-02-15 02:04 UTC, Andy Shevchenko
Details | Diff

Description Andy Shevchenko 2007-02-15 02:03:48 UTC
Distribution: Fedora Core 5 and others
Hardware Environment: Intel HDA with ALC861 (Uniwill/RoverBook Voyager V200)
Software Environment: ALSA 1.0.14rc2
Problem Description:
The default (auto) configuration isn't produce right routing plan for ALC861 
codec.

Please, apply attached patch.
Comment 1 Andy Shevchenko 2007-02-15 02:04:51 UTC
Created attachment 10425 [details]
Add another Subsystem ID for ALC861
Comment 2 Dave Jones 2007-06-05 22:27:06 UTC
patch resent to maintainer.
Comment 3 Andy Shevchenko 2008-01-09 01:02:39 UTC
Already present in current ALSA (with some changes: used ASUS model).

Note You need to log in before you can comment on or make changes to this bug.