patch_realtek.c
@@ -56502,6 +56502,19 @@ c_func
 (paren
 l_int|0x1584
 comma
+l_int|0x9075
+comma
+l_string|&quot;Uniwill&quot;
+comma
+id|ALC861_UNIWILL_M31
+)paren
+comma
+"&t;"
+id|SND_PCI_QUIRK
+c_func
+(paren
+l_int|0x1584
+comma
 l_int|0x2b01
 comma
 l_string|&quot;Uniwill X40AIx&quot;
